# WidgetClient

./: .gitignore  .gitmodules
Widget_Client/: AnimatedToggleButton.cpp  AnimatedToggleButton.h  CMakeLists.txt  Chat.cpp  Chat.h  Chat.ui  ClickableLabel.h  CodeVerificationWidget.cpp  CodeVerificationWidget.h  CodeVerificationWidget.ui  Commands.h  Config.cpp  Config.h  Contact.cpp  Contact.h  ContactsListWidget.cpp  ContactsListWidget.h  ContactsListWidget.ui  ContactsWidget.cpp  ContactsWidget.h  ContactsWidget.ui  FileDropDialog.cpp  FileDropDialog.h  IoServiceWorker.cpp  IoServiceWorker.h  Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  Mediator.cpp  Mediator.h  MessageContextMenu.cpp  MessageContextMenu.h  MessageContextMenu.ui  MessageInfo.h  MessageWidget.cpp  MessageWidget.h  MessageWidget.ui  MessagesDateWidget.cpp  MessagesDateWidget.h  MessagesDateWidget.ui  (+20 more)
Widget_Client/tests/: CMakeLists.txt  ChatFunctionalTests.cpp  ChatFunctionalTests.h
build-Widget_Client-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Widget_Client-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-1089aade0d2f863e10bc.json  cache-v2-84552abfabacf4bb1259.json  cmakeFiles-v1-4c38d9cd3241cb23efc5.json  codemodel-v2-810ae4ad4eb9ec91702f.json  codemodel-v2-e176010acabbcf4853c5.json  directory-.-Debug-213edf61b40f7eba5312.json  directory-.-Debug-8460335d88081db466bb.json  index-2022-10-27T17-33-51-0526.json  index-2022-11-09T20-53-43-0594.json  target-Widget_Client-Debug-99b67e51d6ecd75ab126.json  target-Widget_Client-Debug-e47fa97e7ea0193b6ed9.json  target-Widget_Client_autogen-Debug-17a710cda9b75728e053.json  target-Widget_Client_autogen_timestamp_deps-Debug-ad3382ec6a9248d10e55.json
build-Widget_Client-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-4977dbfaeb041e3a306e.json  codemodel-v2-8adf8046e627e47d58eb.json  directory-.-Debug-5e35a1765260efb77f5a.json  index-2022-10-20T14-54-30-0933.json  target-Widget_Client-Debug-bdbfa7e4f7c4d357cb43.json
build-Widget_Client-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-Widget_Client-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Widget_Client-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: 32.h.5AB0E21F88C2A07F.idx  64.h.3B2387C0422ADA76.idx  Chat.cpp.29ABB248A582148B.idx  Chat.h.45C4656CE41CA590.idx  Commands.h.1E808CE00E1A5A1F.idx  Commands.h.ECC323976B10519C.idx  Config.cpp.02EF3C5703079C0C.idx  Config.h.06C70D97CEDE4F40.idx  Config.h.DB3ADC75C3E67222.idx  ConnectionHandler.h.6CD1C290AF2D89F3.idx  Contact.cpp.C9401C0DF89AF4E6.idx  Contact.h.208DEFFACCD8DA35.idx  ContactsWidget.cpp.371AB83BD3726E2A.idx  ContactsWidget.h.1FE6D6301BA6D556.idx  IConnectionHandler.h.0F14982BD46EC37D.idx  IoServiceWorker.cpp.381EB1039A670C89.idx  IoServiceWorker.h.5519EAC4766D0981.idx  MSWSock.h.8586457CDBAA65B3.idx  Mainwindow.cpp.1B3EF7B579021DDF.idx  Mainwindow.cpp.7738E06C4A2C0291.idx  Mainwindow.h.67E06704B3F2627E.idx  Mainwindow.h.6A81BA6E521DDA4B.idx  MessageWidget.cpp.8038C5967E91CCCB.idx  MessageWidget.h.B23792BF9ECD3D3A.idx  Messenger.h.597EABB3CA9B133E.idx  OnlineStatusChecker.cpp.B5A1B829F151B501.idx  OnlineStatusChecker.h.80B899CCF84383E0.idx  QDebug.2C4A8F725DCF7606.idx  (+1304 more)
build-Widget_Client-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/Widget_Client_autogen/: deps  mocs_compilation.cpp
build-Widget_Client-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/Widget_Client_autogen/EWIEGA46WW/: moc_Chat.cpp  moc_Chat.cpp.d  moc_ContactsWidget.cpp  moc_ContactsWidget.cpp.d  moc_Mainwindow.cpp  moc_Mainwindow.cpp.d  moc_MessageWidget.cpp  moc_MessageWidget.cpp.d  moc_RegisterDialog.cpp  moc_RegisterDialog.cpp.d  moc_WindowManager.cpp  moc_WindowManager.cpp.d
build-Widget_Client-Desktop_Qt_6_3_0_MSVC2019_64bit-Debug/Widget_Client_autogen/include/: ui_Chat.h  ui_ContactsWidget.h  ui_Mainwindow.h  ui_MessageWidget.h  ui_RegisterDialog.h
